# LLM-Integrated-Socially-Assistive-Robots-in-Autism

./: PROJECT_DOCUMENTATION.txt  README.md  pyproject.toml  requirements.txt
config/: app.yaml  llm.yaml  robot.yaml
config/tasks/: adaptive_storytelling.yaml  emotion_recognition.yaml  turn_taking.yaml
data/processed/tables/: table1.csv  table2.csv  table3.csv  table4.csv
data/raw/sessions/: sess_00f111e1ad.json  sess_02b4d297e9.json  sess_09a3ea3ae1.json  sess_0a1372f42f.json  sess_0f2d2fcf32.json  sess_106a76e39b.json  sess_10d254b1a5.json  sess_135744e91d.json  sess_24947af50a.json  sess_268a8f41af.json  sess_275cbf839c.json  sess_2e462c4120.json  sess_2ee8dffbc9.json  sess_2f8e4e3d33.json  sess_329e95e061.json  sess_3514ad878e.json  sess_393d533e74.json  sess_3bcd8b8bd4.json  sess_3e1a159a05.json  sess_3f6cb9a488.json  sess_3fd440be54.json  sess_4b9afd2914.json  sess_4f140162fa.json  sess_505d04296a.json  sess_51ca6348fc.json  sess_51e846ee3e.json  sess_58797daeda.json  sess_59c951b1d4.json  sess_6033c98df2.json  sess_67123779f8.json  sess_67bf4b4d0d.json  sess_6a8a4fdc0c.json  sess_6b8eae8acf.json  sess_6dbd921454.json  sess_6e1b91148a.json  sess_6fab10713d.json  sess_716de79920.json  sess_728ea7f8ef.json  sess_747336838a.json  sess_7499f7760e.json  (+50 more)
scripts/: compute_table1.py  compute_table2.py  compute_table3.py  run_ablation.py  run_session.py  test_llm.py
src/pepper_llm_mvp/: types.py
src/pepper_llm_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pepper_llm_mvp/analytics/: logger.py  metrics_architecture.py  metrics_latency.py  (+1 more)
(+14 files in other folders)
